// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components/Toggle Checked smoke-test 1`] = `
<div class="flex items-center">
  <button type="button"
          role="switch"
          aria-checked="true"
          data-state="checked"
          value="on"
          class="p-0 bg-neutral-600 rounded-full relative inline-block transition-colors data-[disabled]:bg-gui-unavailable data-[disabled]:cursor-not-allowed data-[state=checked]:bg-orange-600 focus-base w-[56px] h-32"
  >
    <span data-state="checked"
          class="block bg-white data-[disabled]:bg-neutral-500 rounded-full drop-shadow-toggle transition-transform h-[28px] w-[28px] translate-x-2 data-[state=checked]:translate-x-[26px]"
    >
    </span>
  </button>
</div>
`;

exports[`Components/Toggle Default smoke-test 1`] = `
<div class="flex items-center">
  <button type="button"
          role="switch"
          aria-checked="false"
          data-state="unchecked"
          value="on"
          class="p-0 bg-neutral-600 rounded-full relative inline-block transition-colors data-[disabled]:bg-gui-unavailable data-[disabled]:cursor-not-allowed data-[state=checked]:bg-orange-600 focus-base w-[56px] h-32"
  >
    <span data-state="unchecked"
          class="block bg-white data-[disabled]:bg-neutral-500 rounded-full drop-shadow-toggle transition-transform h-[28px] w-[28px] translate-x-2 data-[state=checked]:translate-x-[26px]"
    >
    </span>
  </button>
</div>
`;

exports[`Components/Toggle Disabled smoke-test 1`] = `
<div class="flex items-center">
  <button type="button"
          role="switch"
          aria-checked="false"
          data-state="unchecked"
          data-disabled
          disabled
          value="on"
          class="p-0 bg-neutral-600 rounded-full relative inline-block transition-colors data-[disabled]:bg-gui-unavailable data-[disabled]:cursor-not-allowed data-[state=checked]:bg-orange-600 focus-base w-[56px] h-32"
  >
    <span data-state="unchecked"
          data-disabled
          class="block bg-white data-[disabled]:bg-neutral-500 rounded-full drop-shadow-toggle transition-transform h-[28px] w-[28px] translate-x-2 data-[state=checked]:translate-x-[26px]"
    >
    </span>
  </button>
</div>
`;
